# cvassist

./: .gitignore  README.md  pyproject.toml
src/cvassist/: main.py
src/cvassist/application/: __init__.py
src/cvassist/application/services/: __init__.py  api_service.py
src/cvassist/application/use_cases/: send_prompt.py  test_connection.py
src/cvassist/domain/: __init__.py  exceptions.py
src/cvassist/domain/entities/: __init__.py  api_config.py
src/cvassist/domain/interfaces/: __init__.py  api_gateway.py  config.py
src/cvassist/infrastructure/: __init__.py  container.py
src/cvassist/infrastructure/cli/: commands.py
src/cvassist/infrastructure/config/: env_config.py
src/cvassist/infrastructure/gateways/: __init__.py  openrouter_gateway.py
src/cvassist/presentation/: __init__.py
src/cvassist/presentation/api/: routes.py  server.py
