[project]
name = "cvassist"
version = "0.1.0"
description = ""
authors = [
    {name = "nauka117",email = "v_kozyrev@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "cvassist", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
